[tool.poetry]
name = "dev_env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
open3d = "0.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
